testsuite/tests/typecheck/should_fail/T16394.stderr

T16394.hs:6:17: error:
    Instance head cannot contain nested ‘forall’s or contexts
    In an instance declaration
